Added HTML export to gh-pages

--- a/iris-eda.html
+++ b/iris-eda.html
@@ -7507,7 +7507,8 @@ a.anchor-link {
     display: inline-block;
     white-space: normal;
   }
-</style>
+</style>ii
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
